app/styles/components/map/c-form.scss
@import '../../settings';

.c-form {

  .field-name {
    color: $color-4;
    font-size: $font-size-small;
    font-weight: $font-weight-bold;
    text-transform: uppercase;

    & + * {
      margin: 5px 0 0;
    }
  }

  .text-input,
  .textarea {
    background: transparent;
    border: 1px solid $color-14;
    border-radius: 0;
    color: $color-4;
    font-family: $font-family-1;
    font-size: $font-size-small;

    ::-webkit-input-placeholder {
      color: rgba($color-14, .3);
    }

    ::-moz-placeholder {
      color: rgba($color-14, .3);
    }

    :-ms-input-placeholder {
      color: rgba($color-14, .3);
    }
  }

  .text-input,
  .textarea {
    padding: 10px;
  }

  .textarea {
    height: 100%;
    min-height: 124px;
    resize: none;

    @media #{$mq-tablet} {
      min-height: none;
    }
  }
}

